--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
 <link rel="stylesheet" href="styles/portfolio.css">
 <script src="https://kit.fontawesome.com/61bfeadb85.js" crossorigin="anonymous"></script>
+
     <title>Brooke Moore Portfolio</title>
 </head>
 <body>
-    <h1> Hello </h1>
+    <h1> Hello <i class="fa-brands fa-instagram"></i> </h1>
     <p>
-        Brooke Moore
+        Brooke Moore i am american
     </p>
 </body>
 </html>
