--- a/index.html
+++ b/index.html
@@ -22,9 +22,13 @@
     <title>Brooke Moore Portfolio</title>
 </head>
 <body>
-    <h1> Hello <i class="fa-brands fa-instagram"></i> </h1>
-    <p>
-        Brooke Moore i am american
-    </p>
+    <div class="hero">
+    <p>Hello, I am</p>
+    <h1>Brooke Moore</h1>
+    <h2 class="mb-3">Front-end developer based in Tampa, Florida</h2>
+    <div>
+    <a href="#" class="contact btn btn-branding">Contact me</a>
+    </div>
+    </div>
 </body>
 </html>
