--- a/index.html
+++ b/index.html
@@ -30,5 +30,29 @@
     <a href="#" class="contact btn btn-branding">Contact me</a>
     </div>
     </div>
-</body>
-</html>
+    <p class="m-5 text-center">Featured projects I'd like to showcase</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+            </div>
+            <div class="col-6">
+        <h2 class=" project-1 mb-5">Artist Fan Page</h2>
+        <p class="p-1 mb-5 text-muted">I chose my favorite artist and created a fan page depicting who he is as well
+            as advertising his new album coming out. On this fan page you have access to Davido's official
+            website along with his music and background. This page
+            has HTML and CSS being used.
+        </p>
+        <a href="" class="btn btn-branding-outline">Launch Project</a>
+    </div>
+</div>
+</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-6">
+            </div>
+            <div class="col-6">
+            </div>
+        </div>
+    </div>
+    </body>
+    </html>
