--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     </div>
     <p class="m-5 text-center">Featured projects I'd like to showcase</p>
     <div class="container">
-        <div class="row">
-            <div class="col-6">
+        <div class="row mb-5">
+            <div class="col d-none d-lg-block">
+                <img src="images/FanPage.png" class="img-fluid" alt="">
             </div>
-            <div class="col-6">
+            <div class="col">
+                <div class="project-description">
         <h2 class=" project-1 mb-5">Artist Fan Page</h2>
         <p class="p-1 mb-5 text-muted">I chose my favorite artist and created a fan page depicting who he is as well
             as advertising his new album coming out. On this fan page you have access to Davido's official
@@ -43,16 +45,40 @@
             has HTML and CSS being used.
         </p>
         <a href="" class="btn btn-branding-outline">Launch Project</a>
+                </div>
     </div>
 </div>
 </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-6">
-            </div>
-            <div class="col-6">
-            </div>
+
+<div class="row mb-5">
+    <div class="col d-none d-lg-block">
+        <img src="images/WorldClock.png" class="img-fluid" alt="">
+    </div>
+    <div class="col">
+        <div class="project-description">
+<h2 class=" project-1 mb-5">World Clock</h2>
+<p class="p-1 mb-5 text-muted">This app allows you to search thousands of places all over the world 
+    and gives you back the date and time down to the second.
+
+</p>
+<a href="" class="btn btn-branding-outline">Launch Project</a>
         </div>
+</div>
+</div>
+<div class="row mb-5">
+    <div class="col d-none d-lg-block">
+        <img src="images/weatherapp.png" class="img-fluid" alt="">
     </div>
+    <div class="col">
+        <div class="project-description">
+<h2 class=" project-1 mb-5">Weather App</h2>
+<p class="p-1 mb-5 text-muted">Using a weather API I created an app that allows you to search anywhere in the world,
+    responding back with the current weather, the high and low for the day, time and date,
+    as well as a forecast for the next 6 days.
+</p>
+<a href="" class="btn btn-branding-outline">Launch Project</a>
+        </div>
+</div>
+</div>
     </body>
     </html>
