--- a/index.html
+++ b/index.html
@@ -1,85 +1,93 @@
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
-    crossorigin="anonymous"
-  />
-  <script
-  src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-  integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-  crossorigin="anonymous"
-></script>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="styles/portfolio.css">
-<script src="https://kit.fontawesome.com/61bfeadb85.js" crossorigin="anonymous"></script>
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles/portfolio.css" />
+    <script
+      src="https://kit.fontawesome.com/61bfeadb85.js"
+      crossorigin="anonymous"
+    ></script>
 
     <title>Brooke Moore Portfolio</title>
-</head>
-<body>
+  </head>
+  <body>
     <div class="hero">
-    <p>Hello, I am</p>
-    <h1>Brooke Moore</h1>
-    <h2 class="mb-3">Front-end developer based in Tampa, Florida</h2>
-    <div>
-    <a href="#" class="contact btn btn-branding">Contact me</a>
-    </div>
+      <p>Hello, I am</p>
+      <h1>Brooke Moore</h1>
+      <h2 class="mb-3">Front-end developer based in Tampa, Florida</h2>
+      <div>
+        <a href="#" class="contact btn btn-branding">Contact me</a>
+      </div>
     </div>
     <p class="m-5 text-center">Featured projects I'd like to showcase</p>
     <div class="container">
-        <div class="row mb-5">
-            <div class="col d-none d-lg-block">
-                <img src="images/FanPage.png" class="img-fluid" alt="">
-            </div>
-            <div class="col">
-                <div class="project-description">
-        <h2 class=" project-1 mb-5">Artist Fan Page</h2>
-        <p class="p-1 mb-5 text-muted">I chose my favorite artist and created a fan page depicting who he is as well
-            as advertising his new album coming out. On this fan page you have access to Davido's official
-            website along with his music and background. This page
-            has HTML and CSS being used.
-        </p>
-        <a href="" class="btn btn-branding-outline">Launch Project</a>
-                </div>
-    </div>
-</div>
-</div>
-
-<div class="row mb-5">
-    <div class="col">
-        <div class="project-description">
-<h2 class=" project-1 mb-5">World Clock</h2>
-<p class="p-1 mb-5 text-muted">This app allows you to search thousands of places all over the world 
-    and gives you back the date and time down to the second.
-
-</p>
-<a href="" class="btn btn-branding-outline">Launch Project</a>
-        </div>    
-</div>
-<div class="col d-none d-lg-block">
-    <img src="images/WorldClock.png" class="img-fluid" alt="">
-</div>
-</div>
-</div>
-<div class="row mb-5">
-    <div class="col d-none d-lg-block">
-        <img src="images/weatherapp.png" class="img-fluid" alt="">
-    </div>
-    <div class="col">
-        <div class="project-description">
-<h2 class=" project-1 mb-5">Weather App</h2>
-<p class="p-1 mb-5 text-muted">Using a weather API I created an app that allows you to search anywhere in the world,
-    responding back with the current weather, the high and low for the day, time and date,
-    as well as a forecast for the next 6 days.
-</p>
-<a href="" class="btn btn-branding-outline">Launch Project</a>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/FanPage.png" class="img-fluid" alt="" />
         </div>
-</div>
-</div>
-    </body>
-    </html>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="project-1 mb-5">Artist Fan Page</h2>
+            <p class="p-1 mb-5 text-muted">
+              I chose my favorite artist and created a fan page depicting who he
+              is as well as advertising his new album coming out. On this fan
+              page you have access to Davido's official website along with his
+              music and background. This page has HTML and CSS being used.
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch Project</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-description">
+            <h2 class="project-1 mb-5">World Clock</h2>
+            <p class="p-1 mb-5 text-muted">
+              This app allows you to search thousands of places all over the
+              world and gives you back the date and time down to the second.
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch Project</a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/WorldClock.png" class="img-fluid" alt="" />
+        </div>
+      </div>
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/weatherapp.png" class="img-fluid" alt="" />
+        </div>
+        <div class="col">
+          <div class="project-description">
+            <h2 class="project-1 mb-5">Weather App</h2>
+            <p class="p-1 mb-5 text-muted">
+              Using a weather API I created an app that allows you to search
+              anywhere in the world, responding back with the current weather,
+              the high and low for the day, time and date, as well as a forecast
+              for the next 6 days.
+            </p>
+            <a href="" class="btn btn-branding-outline">Launch Project</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
