--- a/about.html
+++ b/about.html
@@ -27,10 +27,10 @@
     ></script>
 </head>
 <body>
-    <div class="about-section container">
+    <div class="content-container">
         <div class="row">
             <div class="col-lg-6">
-                <div class="about-section-content">
+                <div class="content">
     <h1 class="mb-4">Hi, I am Brooke Moore</h1>
     <h2 class="header-2 mb-4">Front-end Developer, based in Tampa Florida</h2>
     <p class="header-3 mb-4">
