--- a/work.html
+++ b/work.html
@@ -30,8 +30,34 @@
 <body>
     <div class="content-container">
     <div class="content">
-    <h1 class="mb-4">Hi, I am Brooke Moore</h1>
+    <h1 class="mb-5">Take a look at what I've been working on!</h1>
 
+    <div class="row">
+        <div class="col-md-6 mb-4">
+            <img src="images/FanPage.png" alt="" class="img-fluid mb-3">
+            <h3 class="text-center m-0">Fan Page Project</h3>
+            <p class="header-3 text-center text-muted ">
+                Built with HTML and CSS
+            </p>
+        </div>
+        <div class="row">
+            <div class="col-md-6 mb-4">
+                <img src="images/WorldClock.png" alt="" class="img-fluid mb-3">
+                <h3 class="text-center m-0">World Clock</h3>
+                <p class="header-3 text-center text-muted ">
+                    Built with HTML, CSS, Javascript, and moment.js
+                </p>
+            </div>
+            <div class="row">
+                <div class="col-md-6 mb-4">
+                    <img src="images/weatherapp.png" alt="" class="img-fluid mb-3">
+                    <h3 class="text-center m-0">Weather App</h3>
+                    <p class="header-3 text-center text-muted ">
+                        Built with HTML,CSS,Javascript and Weather API
+                    </p>
+                </div>
+        </div>
+    </div>
  </div>
  </div>
 
